--- a/ajax.html
+++ b/ajax.html
@@ -1,92 +1,91 @@
 <html>
 <head>
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/it.js"></script>
     <script src="controller.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <title>My Todo SPA</title>
+    <script type="text/javascript">
+        function checkTodo(todoId, done) {
+            const todoInfo = {id: todoId, done: done};
+            controller.checkTodo(todoInfo, function (result) {
+                if (result.success) {
+                    const todoElemId = 'todo_' + todoId;
+                    const todoElement = $('#' + todoElemId);
+                    if (done) todoElement.addClass('checked');
+                    if (!done) todoElement.removeClass('checked');
+                }
+            });
+        }
+
+        function deleteTodo(todoId) {
+            const todoInfo = {id: todoId};
+            controller.deleteTodo(todoInfo, function (result) {
+                if (result.success) {
+                    const todoElemId = 'todo_' + todoId;
+                    const todoElement = $('#' + todoElemId);
+                    todoElement.fadeOut(500, function () {
+                        $(this).remove();
+                    });
+                }
+            });
+        }
+
+        function saveTodo() {
+            const newTodoTitleNode = $('#newTodoTitle')[0];
+            const inputValue = newTodoTitleNode.value;
+            if (inputValue === '')
+                return;
+            newTodoTitleNode.value = '';
+            const todoInfo = {title: inputValue, done: false, tms: new Date().toISOString()};
+            controller.saveTodo(todoInfo, function (result) {
+                todoInfo.id = result.id;
+                createTodoListItem(todoInfo);
+            });
+        }
+
+        function createTodoListItem(todoInfo) {
+            const todoText = document.createElement('div');
+            const todoTimestamp = document.createElement('div');
+            const todo = document.createElement('li');
+            const closeButton = document.createElement('span');
+
+            $(todo)
+                .attr('id', 'todo_' + todoInfo.id)
+                .addClass('todo')
+                .addClass(todoInfo.done ? 'checked' : '')
+                .appendTo($('#todos'))
+                .click(function () {
+                    checkTodo(todoInfo.id, !$(this).hasClass('checked'));
+                });
+
+            $(todoText).html(todoInfo.title).addClass('todoTitleDiv').appendTo($(todo));
+            $(todoTimestamp).html(moment(todoInfo.tms).format('DD/MM/YYYY')).addClass('todoTimestampDiv').appendTo($(todo));
+
+            $(closeButton)
+                .addClass('close')
+                .text('x')
+                .appendTo($(todo))
+                .click(function () {
+                    deleteTodo(todoInfo.id);
+                });
+        }
+
+        $(document).ready(function () {
+            controller.getTodos(function (todos) {
+                for (let i = 0; i < todos.length; ++i)
+                    createTodoListItem(todos[i]);
+            });
+        });
+    </script>
 </head>
 <body>
-<script type="text/javascript">
-
-    function checkTodo(todoId, done) {
-        const todoInfo = {id: todoId, done: done};
-        controller.checkTodo(todoInfo, function (result) {
-            if (result.success) {
-                const todoElemId = 'todo_' + todoId;
-                const todoElement = $('#' + todoElemId);
-                if (done) todoElement.addClass('checked');
-                if (!done) todoElement.removeClass('checked');
-            }
-        });
-    }
-
-    function deleteTodo(todoId) {
-        const todoInfo = {id: todoId};
-        controller.deleteTodo(todoInfo, function (result) {
-            if (result.success) {
-                const todoElemId = 'todo_' + todoId;
-                const todoElement = $('#' + todoElemId);
-                todoElement.fadeOut(500, function () {
-                    $(this).remove();
-                });
-            }
-        });
-    }
-
-    function saveTodo() {
-        const newTodoTitleNode = $('#newTodoTitle')[0];
-        const inputValue = newTodoTitleNode.value;
-        if (inputValue === '')
-            return;
-        newTodoTitleNode.value = '';
-        const todoInfo = {title: inputValue, done: false, tms: new Date().toISOString()};
-        controller.saveTodo(todoInfo, function(result){
-            todoInfo.id = result.id;
-            createTodoListItem(todoInfo);
-        });
-    }
-
-    function createTodoListItem(todoInfo) {
-        const todoText = document.createElement('div');
-        const todoTimestamp = document.createElement('div');
-        const todo = document.createElement('li');
-        const closeButton = document.createElement('span');
-
-        $(todo)
-            .attr('id', 'todo_' + todoInfo.id)
-            .addClass('todo')
-            .addClass(todoInfo.done ? 'checked' : '')
-            .appendTo($('#todos'))
-            .click(function () {
-                checkTodo(todoInfo.id, !$(this).hasClass('checked'));
-            });
-
-        $(todoText).html(todoInfo.title).addClass('todoTitleDiv').appendTo($(todo));
-        $(todoTimestamp).html(moment(todoInfo.tms).format('DD/MM/YYYY')).addClass('todoTimestampDiv').appendTo($(todo));
-
-        $(closeButton)
-            .addClass('close')
-            .text('x')
-            .appendTo($(todo))
-            .click(function () {
-                deleteTodo(todoInfo.id);
-            });
-    }
-
-    $(document).ready(function () {
-        controller.getTodos(function(todos) {
-            for (let i = 0; i < todos.length; ++i)
-                createTodoListItem(todos[i]);
-        });
-    });
-
-</script>
-<div id="newTodoDiv" class="header">
-    <h2 class="title">My To Do List</h2>
-    <input type="text" id="newTodoTitle" placeholder="Title...">
-    <span onclick="saveTodo()" class="addBtn">Add</span>
-</div>
-<ul id="todos"></ul>
+    <div id="newTodoDiv" class="header">
+       <h2 class="title">My To Do List</h2>
+        <input type="text" id="newTodoTitle" placeholder="New todo title..."/>
+      <span onclick="saveTodo()" class="addBtn">Add</span>
+    </div>
+    <ul id="todos"></ul>
 </body>
 </html>
