click on X doesn't raise parent click event (mark as done/undone todo)

--- a/ajax.html
+++ b/ajax.html
@@ -67,7 +67,8 @@
                 .addClass('close')
                 .text('x')
                 .appendTo($(todo))
-                .click(function () {
+                .click(function (event) {
+                    event.stopPropagation();
                     deleteTodo(todoInfo.id);
                 });
         }
